index.css
/* TAGS */
html {
    scroll-behavior: smooth;
}
:root {
    --red: #ff6666;
    --yellow: #fff45c;
    --green: #01ff99;
    --blue: #06ccff;    ;
    --purple: #9934ff;
}
body {
    color: white;
    background-color: black;
    font-family: Arial, Helvetica, sans-serif;
    display: grid;
    grid-template-columns: repeat(12, 1fr);
    grid-template-rows: repeat(17, 100px);
    max-width: 1425px;
    margin: 0;
    padding: 0; 
}

form {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin-bottom: 20px;
}
header {
    grid-column: 1 / span 12;
    grid-row: 1 / 2;
}

main {
    grid-column: 1 / 13;
    grid-row: 3 / 14;
    padding-bottom: 30px;
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-template-rows: repeat(11, 1fr);
}
main {
    padding-bottom: 20px;
}
nav {
    display: flex;
    padding: 10px 20px;
}
nav h1 {
    font-size: 50px;
    letter-spacing: 3px;
    margin: 0;
}
a {
    margin-left: auto;
    text-decoration: none;
    color: white;
}
a:visited {
    color: white;

}
a:hover {
    cursor: pointer;
}
input:focus {
background-image: linear-gradient(to right, var(--blue), var(--green), var(--yellow), var(--red), var(--purple), var(--blue)) 0 round;
}

/* CLASSES */
    
.giphy-link {
    cursor: default;
    pointer-events: none;
    border: none;
    max-height: 300px;
    max-width: 450px;
}
.github-logo {
    width: 50px;
}
.hero-gif {
    min-height: 200px;
    margin: 10px;
}
.home-link {
    margin: 0;
}
.instructions {
    font-size: 30px;
    margin: 10px;
    width: 75vw;
    text-align: center;
}
.title {
    text-transform: uppercase;
    font-size: 70px;
    text-align: center;
    max-height: 200px;
    margin: auto auto;
    background: linear-gradient(to right, var(--blue), var(--green), var(--yellow), var(--red), var(--purple), var(--blue));
    -webkit-background-clip: text;
    color: transparent;
    grid-column: 2 / 12 ;
    grid-row: 2 / 3;
}
.word-input {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 20px;
    border-radius: 4px;
    margin: 10px;
    height: 38px;
}

/* IDS */
#big-libs {
    font-family: 'Neucha', Arial, Helvetica, sans-serif;
    letter-spacing: 10px;
}
#nav-libs {
    font-family: 'Neucha', Arial, Helvetica, sans-serif;
}
#giflib-paragraph {
    text-align: center;
    font-size: 30px;
}
#hero-gif-container {
    grid-row: 3 / 5;
    grid-column: 2 / 5;
    display: flex;
    justify-content: center;
    align-content: center;
}
#hero-section {
    height: 700px;
    grid-column: 1 / span 12;
    grid-row: 2 / span 6;
    display: grid;
    grid-template-columns: 1fr repeat(3, 2fr) 1fr;
    grid-template-rows: repeat(4, 115px);
    box-sizing: border-box;
}
#hit-me-container {
    margin: 30px;
}
#hit-me-container p {
    text-align: center;
}
#how-to-section {
    grid-column: 1 / span 12;
    grid-row: 8 / span 5;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;

}
#how-to-section h1 {
    font-size: 80px;
    margin: 50px;
    text-align: center;
    background: linear-gradient(to right, var(--blue), var(--green), var(--yellow), var(--red), var(--purple), var(--blue));
    -webkit-background-clip: text;
    color: transparent;
}
#input-container {
    grid-column: 4 / 10;
    grid-row: 3 / 8;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    width: 50vw;
    margin: 0 auto;
}
#main-logo {
    display: flex;
    justify-content: center;
    contain: content;
    grid-column: 2 / 5;
    grid-row: 1 / 3;
}
#main-logo h1 {
    font-size: 200px;
    max-height: 230px;
    margin: 0;
    align-self: flex-end;
}
#submit-button, .start-button {
    display: block;
    font-size: 30px;
    font-weight: 600;
    color: white;
    background-color: black;
    border: 6px solid white;
    border-radius: 10px;
    height: 100px;
    width: 300px;
}
#submit-button {
    margin: 0 auto;
    grid-column: 1 / span 6;
    grid-row: 5 / 6;
}
#submit-button:hover, .start-button:hover {
    border: 6px solid transparent;
    border-radius: 10px;
    border-image: linear-gradient(to right, var(--blue), var(--green), var(--yellow), var(--red), var(--purple), var(--blue)) 0 round;
    cursor: pointer;
    color: black;
    box-shadow: inset 0 0 0 6px black;
    background-image: linear-gradient(to right, var(--blue), var(--green), var(--yellow), var(--red), var(--purple), var(--blue));
    animation: slide 0.5s linear infinite;
    height: 100px;
    width: 300px;
}
#next-button {
    grid-row: 12 / 13;
    grid-column: 1 / 2;
    margin: 0 auto;
    display: none;
}
#step-one {
    display: flex;
    width: 60vw;
    max-height: 300px;
}
#step-one p {
    margin: 0;
    align-self: flex-end;
}
#story-container {
    grid-column: 1 / span 6;
    grid-row: 1 / span 10;
    padding: 30px;
    overflow-y: scroll;
    height: 500px;
    scrollbar-width: none;
    -ms-overflow-style: none;
}
#story-container::-webkit-scrollbar {
    width: 0;
    height: 0;
}

@keyframes slide {
    to {
        background-position:20vw;
    }
}
/* Media Queries */

@media only screen and (max-width: 425px) {
    body {
        display: flex;
        flex-wrap: wrap;
        align-content: center;
        max-width: 100vw;
        margin: 0;
        padding: 0; 
    }
    nav {
        padding: 10px 20px;
        box-sizing: border-box;
        width: 100vw;
    }


    .giphy-link {
        pointer-events: none;
        max-width: 280px;
    }
    .instructions {
        font-size: 20px;
    }
    .title {
        display: flex;
        flex-wrap: wrap;
        font-size: 50px;
    }
    .word-input {
        font-family: Arial, Helvetica, sans-serif;
        font-size: 15px;
        border-radius: 4px;
        margin: 5px;
        height: 30px;
        width: 150px;
    }

    #giflib-paragraph {
        font-size: 25px;
        line-height: 40px;
    }
    #hero-gif-container {
        display: none;
    }
    #hero-section {
        display: flex;
        flex-wrap: wrap;
        margin: 0 auto;
        padding-top: 20px;
        height: 370px;
    }
    #hit-me-container {

    }
    #hit-me-container p {
        margin: 0 auto 18px 0;
    }
    #how-to-section {
        grid-column: 1 / 1;
        grid-row: 4 / 6;
        display: flex;
        flex-wrap: wrap;
    }
    #how-to-section h1 {
        font-size: 50px;
        margin-bottom: 20px;
    }
    #input-container {
        display: flex;
        flex-wrap: wrap;
        flex-direction: column;
        align-content: center;
        width: 90vw;
        margin: 0 auto;
    }
    #main-logo {

    }
    #main-logo h1 {
        font-size: 210px;
        margin: 0;
        line-height: 180px;
        text-align: center;
        display: flex;
        align-self: flex-start;
        flex-direction: column;
    }
    #big-libs {
        font-size: 190px;
        letter-spacing: 5px;
    }
    #step-one {
        display: flex;
        flex-wrap: wrap;
        width: 80vw;
    }
    #step-one p {
        margin: 30px 10px 0 10px;
    }
    #story-container {
        overflow-y: scroll;
        height: 500px;
    }
}

